简化render.yaml：使用单行buildCommand，改用env而非runtime

--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,8 @@
 services:
   - type: web
     name: nutrition-assessment-app
-    runtime: node
-    plan: starter
-    buildCommand: |
-      # 安装Node.js依赖
-      npm ci
-      # 安装Python依赖（使用python3 -m pip确保使用正确的pip）
-      python3 -m pip install --upgrade pip
-      python3 -m pip install -r backend/requirements.txt
-      # 构建Next.js应用
-      npm run build
+    env: node
+    buildCommand: npm install && python3 -m pip install --upgrade pip && python3 -m pip install -r backend/requirements.txt && npm run build
     startCommand: npm start
     envVars:
       - key: NODE_ENV
